--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "dependencies": {
     "axios": "^0.19.0",
+    "moment": "^2.24.0",
     "react": "^16.8.6",
+    "react-date-picker": "^7.5.1",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1",
     "react-table": "^6.10.0"
