--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/preset-env": "^7.5.2",
+    "@babel/preset-react": "^7.0.0",
     "axios": "^0.19.0",
     "moment": "^2.24.0",
     "react": "^16.8.6",
