added container to display

--- a/.env
+++ b/.env
@@ -1,5 +1,2 @@
-REACT_APP_ADD_OCCUPY=localhost:4000
-REACT_APP_GET_ALL=localhost:2303
-REACT_APP_ROOM=localhost:2302
-REACT_APP_GET_ROOM=localhost:2351
-REACT_APP_AWS_IP=localhost:3000
+REACT_APP_AWS_IP=54.246.147.202
+REACT_APP_DNS=localhost
