--- a/package.json
+++ b/package.json
@@ -1,22 +1,39 @@
 {
-  "name": "frontend",
+  "name": "qa-concourse-overlay",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@babel/preset-env": "^7.5.2",
-    "@babel/preset-react": "^7.0.0",
+    "acorn": "^6.1.1",
     "axios": "^0.19.0",
+    "axios-mock-adapter": "^1.16.0",
+    "bootstrap": "^4.3.1",
+    "caniuse-lite": "^1.0.30000974",
+    "core-js": "^3.1.4",
+    "jest-enzyme": "^7.0.2",
+    "jquery": "^3.4.1",
+    "jwt-decode": "^2.2.0",
+    "lodash": "^4.17.11",
     "moment": "^2.24.0",
+    "moment-business-days": "^1.1.3",
+    "moxios": "^0.4.0",
     "react": "^16.8.6",
+    "react-bootstrap": "^1.0.0-beta.9",
+    "react-burger-menu": "^2.6.10",
     "react-date-picker": "^7.5.1",
+    "react-datepicker": "^2.7.0",
+    "react-day-picker": "^7.3.0",
     "react-dom": "^16.8.6",
-    "react-scripts": "^3.0.1",
-    "react-table": "^6.10.0"
+    "react-router-dom": "^5.0.1",
+    "react-scripts": "3.0.1",
+    "react-table": "^6.10.0",
+    "reactstrap": "^8.0.0",
+    "sinon": "^7.3.2",
+    "typescript": "^3.5.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "react-scripts test --coverage --watchAll=false --verbose",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -35,8 +52,14 @@
     ]
   },
   "devDependencies": {
-    "case-sensitive-paths-webpack-plugin": "^2.2.0",
+    "babel-jest": "^24.8.0",
     "enzyme": "^3.10.0",
-    "enzyme-adapter-react-16": "^1.14.0"
+    "enzyme-adapter-react-16": "^1.14.0",
+    "enzyme-to-json": "^3.3.5"
+  },
+  "jest": {
+    "snapshotSerializers": [
+      "enzyme-to-json/serializer"
+    ]
   }
 }
